[FIX] Increase background contrast

--- a/src/client/react/user/scss/views/_main.scss
+++ b/src/client/react/user/scss/views/_main.scss
@@ -20,7 +20,7 @@
 		padding: 1rem;
 		margin: 1rem;
 		color: white;
-		background: rgba(0,0,0,0.7);
+		background: rgba(0,0,0,0.8);
 	}
 
 	.helper-button {
